--- a/index.html
+++ b/index.html
@@ -203,15 +203,15 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Alexandros Deligiannis</div>
+<!--                                 <div class="sub-title">Alexandros Deligiannis</div> -->
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
+<!--                             <div class="info">
                                 <div class="head">Address</div>
                                 <div class="sub-title">Akropolews 27, Komotini</div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
@@ -249,9 +249,9 @@
     </section>
 
     <!-- footer section start -->
-    <footer>
+<!--     <footer>
         <span>Created By <a href="https://www.codingnepalweb.com">Alexandros Deligiannis</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
-    </footer>
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
