--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Alexandros Deligiannis -->
+<!-- Created By DevAlx -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -203,15 +203,15 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-<!--                                 <div class="sub-title">Alexandros Deligiannis</div> -->
+                                <div class="sub-title">DDD AAA</div> 
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
-<!--                             <div class="info">
+                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Akropolews 27, Komotini</div>
-                            </div> -->
+                                <div class="sub-title"XXX 30, XXX</div>
+                            </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
@@ -250,7 +250,7 @@
 
     <!-- footer section start -->
 <!--     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Alexandros Deligiannis</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="#">Dev Alx</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer> -->
 
     <script src="script.js"></script>
