--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 									<li class="wow fadeInUp" data-wow-delay="0s"><p>Name: <span>Alexandros Deligiannis</span></p></li>
 									<li class="wow fadeInUp" data-wow-delay="0.15s"><p>Birthday: <span>September 27, 1992</span></p></li>
 									<li class="wow fadeInUp" data-wow-delay="0.3s"><p>Age: <span>31 Years</span></p></li>
-									<li class="wow fadeInUp" data-wow-delay="0.45s"><p>Adress: <span>Komotini, GR</span></p></li>
+									<li class="wow fadeInUp" data-wow-delay="0.45s"><p>Address: <span>Komotini, GR</span></p></li>
 									<!-- <li class="wow fadeInUp" data-wow-delay="0.6s"><p>Phone: <span><a href="tel:+17785355344">(+1) 7785 355 344</a></span></p></li> -->
 									<!-- <li class="wow fadeInUp" data-wow-delay="0.75s"><p>Skype: <span>Felicia.A</span></p></li> -->
 									<li class="wow fadeInUp" data-wow-delay="0.9s"><p>Email: <span><a href="mailto:deligiannisalx@gmail.com">deligiannisalx@gmail.com</a></span></p></li>
