test contact form

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 						<div class="container max880">					
 							
 							<!-- Contact Form -->
-							<form class="contact_form" action="/" method="post" autocomplete="off" data-email="frenifyteam@gmail.com">
+							<form class="contact_form" action="/" method="post" autocomplete="off" data-email="deligiannisalx@gmail.com">
 								
 								<!--
 								 	Don't remove below code in avoid to work contact form properly.
