--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<li class="wow fadeInUp" data-wow-delay="0.45s"><p>Address: <span>Komotini, GR</span></p></li>
 									<!-- <li class="wow fadeInUp" data-wow-delay="0.6s"><p>Phone: <span><a href="tel:+17785355344">(+1) 7785 355 344</a></span></p></li> -->
 									<!-- <li class="wow fadeInUp" data-wow-delay="0.75s"><p>Skype: <span>Felicia.A</span></p></li> -->
-									<li class="wow fadeInUp" data-wow-delay="0.9s"><p>Email: <span><a href="mailto:thedevalx@gmail.com">thedevalx@gmail.com</a></span></p></li>
+									<li class="wow fadeInUp" data-wow-delay="0.9s"><p>Email: <span><a href="mailto:thedevalx@gmail.com">TheDevAlx@gmail.com</a></span></p></li>
 									<!-- <li class="wow fadeInUp" data-wow-delay="1.05s"><p>Telegram: <span>Available</span></p></li> -->
 								</ul>
 								
@@ -603,7 +603,7 @@
 								<p>Location</p>
 								<h3>Komotini, Greece</h3>
 								<p>Email</p>
-								<h3><a class="fn__link" href="mailto:thedevalx@gmail.com">thedevalx@gmail.com</a></h3>
+								<h3><a class="fn__link" href="mailto:thedevalx@gmail.com">TheDevAlx@gmail.com</a></h3>
 							</div>
 							<!-- /Contact Info -->
 							
